<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.rainbowhealthpharmacy</groupId>
    <artifactId>Alpha-Income</artifactId>
    <version>1.0.5</version>
    <name>Alpha-Income</name>
    <description>An all in one solution for managing pharmacy income</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>22.0.1</javafx.version>
        <jpackageInputDirectory>${project.build.directory}/jpackage-input</jpackageInputDirectory>
        <maven.build.timestamp.format>yy.MM.ddHH.mmss</maven.build.timestamp.format>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.gemsfx</groupId>
            <artifactId>gemsfx</artifactId>
            <version>1.35.0</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.gemsfx</groupId>
            <artifactId>gemsfx-demo</artifactId>
            <version>1.35.0</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.28</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.1</version>
        </dependency>
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>materialfx</artifactId>
            <version>11.13.5</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-controls</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-base</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-fxml</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.github.goxr3plus</groupId>
            <artifactId>FX-BorderlessScene</artifactId>
            <version>4.4.0</version>
        </dependency>
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>medusa</artifactId>
            <version>17.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.0</version>
        </dependency>
        <dependency>
            <groupId>eu.iamgio</groupId>
            <artifactId>animated</artifactId>
            <version>0.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.mindrot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>0.4</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>application.properties</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <outputDirectory>${jpackageInputDirectory}</outputDirectory>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>application.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>
                                ${jpackageInputDirectory}/lib
                            </outputDirectory>
                            <excludeGroupIds>
                                org.openjfx
                            </excludeGroupIds>
                            <includeScope>
                                runtime
                            </includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.akman</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>0.1.5</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                        <configuration>
                            <name>Alpha-Income</name>
                            <appversion>${project.version}</appversion>
                            <copyright>Unrestricted freeware</copyright>
                            <description>Alpha Income Management</description>
                            <vendor>Rainbow Health Pharmacy</vendor>
                            <icon>${project.basedir}/src/main/resources/images/icon.ico</icon>
                            <modulepath>
                                <dependencysets>
                                    <dependencyset>
                                        <includeoutput>false</includeoutput>
                                        <excludeautomatic>true</excludeautomatic>
                                        <includes>
                                            <include>glob:**/*.jar</include>
                                        </includes>
                                    </dependencyset>
                                </dependencysets>
                            </modulepath>
                            <addmodules>
                                <addmodule>jdk.crypto.cryptoki</addmodule>
                                <addmodule>jdk.crypto.ec</addmodule>
                                <addmodule>java.sql</addmodule>
                                <addmodule>java.naming</addmodule>
                                <addmodule>java.net.http</addmodule>
                                <addmodule>java.instrument</addmodule>
                                <addmodule>javafx.controls</addmodule>
                                <addmodule>javafx.fxml</addmodule>
                                <addmodule>javafx.base</addmodule>
                                <addmodule>javafx.graphics</addmodule>
                                <addmodule>javafx.media</addmodule>
                            </addmodules>
                            <input>${jpackageInputDirectory}</input>
                            <mainjar>Alpha-Income-${project.version}.jar</mainjar>
                            <mainclass>application.Main</mainclass>
                            <winmenu>true</winmenu>
                            <winperuserinstall>true</winperuserinstall>
                            <winshortcut>true</winshortcut>
                            <type>MSI</type>
                            <verbose>true</verbose>
                            <javaoptions>-Xms256m -Xmx1024m -Dprism.order=es2,d3d,sw -Dprism.lcdtext=false</javaoptions>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>9.5</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.17.0</version>
            </plugin>
        </plugins>
    </build>

    
</project>
